--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+langgraph = "^0.6.7"
+langchain = "^0.3.27"
+langchain-google-genai = "^2.1.10"
+dotenv = "^0.9.9"
 
 
 [build-system]
