--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,17 @@ authors = ["Giovane Carvalho <degio2009@hotmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.15"
 langgraph = "^0.6.7"
 langchain = "^0.3.27"
 langchain-google-genai = "^2.1.10"
 dotenv = "^0.9.9"
+langchain-community = "^0.3.29"
+sentence-transformers = "^5.1.0"
+pypdf = "^6.0.0"
+faiss-cpu = "^1.12.0"
+pandas = "^2.3.2"
+openpyxl = "^3.1.5"
 
 
 [build-system]
