--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ faiss-cpu = "^1.12.0"
 pandas = "^2.3.2"
 openpyxl = "^3.1.5"
 streamlit = "^1.49.1"
+ruff = "^0.12.12"
+pylint = "^3.3.8"
 
 
 [build-system]
